--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
+---
+install:
+  - cpanm --notest --skip-satisfied App::mymeta_requires
+  - perl Makefile.PL
+  - make manifest
+  - mymeta-requires --runtime --build --test --configure --develop --recommends --suggests | cpanm
 language: perl
 perl:
+  - "5.20-extras"
+  - "5.20"
+  - "5.18-extras"
   - "5.18"
   - "5.16"
   - "5.14"
